# sp-sota-maps

./: flake.nix  readme.md
.github/actions/lib/: Dockerfile  action.yaml
.github/scripts/: list-slugs.py  release-assets.mk  release-cache.mk  summits.csv.py  summits.json.py
.github/workflows/: ci.yaml  web.yaml
flake/: format.nix  packages.nix  version.nix
lib/: MANIFEST.in  pyproject.toml  setup.py
lib/map_build/: Makefile  main.cpp
lib/src/sota/: __init__.py  __main__.py  bbox.py  chunk.py  gmina.py  hmap.py  layers.py  park.py  queries.py  reference.py  render_carto.cpp  summit.py  view_port.py  zone.py
lib/src/sota/data/: __init__.py  gminas.csv  parks.csv
lib/src/sota/helpers/: cache.py  fetch_summits.py  transformer.py  view_port.py
lib/src/sota/plotters/: __init__.py  isolines.py  zone.py
lib/src/sota/scripts/: bake_cache.py  plot_maps.py  render.py  render_base_maps.py  render_tex.py
lib/src/sota/templates/: gminas.tex  layers.tex  map.tex  parks.tex  scalebar.tex  summitinfo.tex
web/: Cargo.toml  index.html
web/src/: lib.rs  main.rs  router.rs
web/src/components/: about.rs  app.rs  downloads.rs  footer.rs  mod.rs  not_found.rs  release_context.rs  summit.rs  summit_brief.rs  summit_details.rs  summits.rs  summits_context.rs
web/src/helpers/: catch.rs
web/src/model/: gmina.rs  mod.rs  park.rs  reference.rs  release.rs  summit.rs  summits.rs
web/src/views/: error.rs  loading.rs  mod.rs  summit.rs
