[project]
dynamic = ["version"]
name = "sp-sota-maps"
authors = [{ name = "Piotr Majkrzak", email = "piotr@majkrzak.dev" }]
dependencies = [
  "pyproj",
  "geopandas",
  "pandas",
  "numpy",
  "shapely",
  "requests",
  "rasterio",
  "affine",
  "contourpy",
  "rich",
  "cartopy",
  "jinja2",
  "click",
  "rich-click",
  "geojson",
]

[project.scripts]
sota = "sota.__main__:main"

[build-system]
requires = ["setuptools >= 61.0", "pkgconfig"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D100",
  "D102",
  "D101",
  "D103",
  "E501",
  "N802",
  "B019",
  "S314",
  "N806",
  "A001",
  "S603",
  "ANN001",
  "ANN202",
  "C901",
  "A004",
  "PLR2004",
  "EM101",
  "TRY003",
  "PLR0911",
  "D105",
  "S101",
  "RET504",
  "RUF001",
  "PTH123",
  "PTH118",
  "DTZ002",
  "S701",
  "PTH113",
  "S301",
  "ANN201",
  "S113",
  "PTH119",
  "TID252",
  "D104",
  "ANN002",
  "SIM105",
  "SIM112",
]
