[package]
name = "sp-sota-maps"
authors = ["Piotr Majkrzak <piotr@majkrzak.dev>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
csv = "1.3.1"
gloo-net = "0.6.0"
nom = "7.1.3"
serde = "1.0.217"
serde_json = "1.0.134"
thiserror = "2.0.9"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
