[package]
name = "sp-sota-maps"
authors = ["Piotr Majkrzak <piotr@majkrzak.dev>"]
edition = "2021"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
csv = "1.3.1"
gloo-net = "0.6.0"
log = "0.4.27"
lzma-rs = "0.3.0"
nom = "8.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
